--- a/now.html
+++ b/now.html
@@ -16,7 +16,10 @@ title: Now
  	<li>Improving my writing by regularly publishing my thoughts, insights, and musings.</li>
  	<li>Reading everyday.</li>
 </ul>
-<p>Last Updated June 29th</p>
+
+<p>Right now I am interested in collaborating or chatting about travel and code. If you want to swap travel stories/aspirations or you are new to Javascript want to somehow work together shoot me an email.</p>
+
+<p>Last Updated July 18th</p>
 </div>
 
 <script type="text/javascript">   
