--- a/now.html
+++ b/now.html
@@ -11,15 +11,16 @@ title: Now
 
 
 <ul>
- 	<li>Slow traveling indefinitely, currently in France with plans for Ireland.</li>
- 	<li>Learning to code with the help of <a href="https://www.recurse.com/blog/99-free-one-on-one-mentorship-for-new-programmers">RC Start</a>, <a href="https://www.freecodecamp.com">freeCodeCamp</a> and other online resources.</li>
- 	<li>Improving my writing by regularly publishing my thoughts, insights, and musings.</li>
+ 	<li>Traveling around the United States and meeting other travelers and people in the tech industry.</li>
+ 	<li>Taking on freelance web developer and photography work.</li>
+ 	<li>Improving my writing by regularly recording my thoughts, insights, and musings.</li>
+  <li>Sharpening my codding skills with a Project 52.</li>
  	<li>Reading everyday.</li>
 </ul>
 
-<p>Right now I am interested in collaborating or chatting about travel and code. If you want to swap travel stories/aspirations or you are new to Javascript want to somehow work together shoot me an email.</p>
+<p>Right now I am interested in collaborating or chatting about travel and code. If you want to swap travel stories/aspirations or you are new to JavaScript want to somehow work together shoot me an email.</p>
 
-<p>Last Updated July 18th</p>
+<p>Last Updated February 24</p>
 </div>
 
 <script type="text/javascript">   
