--- a/now.html
+++ b/now.html
@@ -12,7 +12,7 @@ title: Now
 
 <ul>
  	<li>Traveling around the United States and meeting other travelers and people in the tech industry.</li>
- 	<li>Taking on freelance web developer and photography work.</li>
+ 	<li>Taking on freelance web and photography work.</li>
  	<li>Improving my writing by regularly recording my thoughts, insights, and musings.</li>
   <li>Sharpening my codding skills with a Project 52.</li>
  	<li>Reading everyday.</li>
