--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@ layout: default
 
           <p>I make things with <a href="http://tanishahampden.com/art/">cameras</a>, <a href="https://tanham.github.io/index.html">words</a>, and <a href="https://github.com/tanham">code</a>. I am interested in storytelling, travel, and self-improvement. I've just concluded a year-long journey through Europe and Vietnam, respectively. While traveling I spent my time thinking, writing and learning to code. Have a look at what I am currently <a href="now.html">working on</a>.</p>
 
-          <p>I have an educational background in Sociology and I am currently interested in using code and data to better frame and possibly answer big questions for (i.e. income inequality). I also have interests in writing software that automates everyday tasks and collects and analyzes personal data, product design, and open source software.</p>
+          <p>I have an educational background in Sociology and I am currently interested in using code and data to better frame and answer big questions (i.e. income inequality). I also have interests in writing software that automates everyday tasks and collects and analyzes personal data, product design, and open source software.</p>
         </div>
 
     
