--- a/now.html
+++ b/now.html
@@ -14,7 +14,7 @@ title: Now
  	<li>Traveling around the United States and meeting other travelers and people in the tech industry.</li>
  	<li>Taking on freelance web and photography work.</li>
  	<li>Improving my writing by regularly recording my thoughts, insights, and musings.</li>
-  <li>Sharpening my codding skills with a Project 52.</li>
+  <li>Sharpening my coding skills with a Project 52.</li>
  	<li>Reading everyday.</li>
 </ul>
 
@@ -23,7 +23,7 @@ title: Now
 <p>Last Updated February 24</p>
 </div>
 
-<script type="text/javascript">   
+<script type="text/javascript">
   colorLinks("#8912FF");
 
   function colorLinks(hexColor)
@@ -33,8 +33,8 @@ title: Now
       {
           if(links[i].href)
           {
-              links[i].style.color = hexColor;  
+              links[i].style.color = hexColor;
           }
-      }  
+      }
   }
   </script>
